Mejorar aserciones en la prueba findDuplicates_shouldReturnAltaForSameEmail para utilizar getFirst() en lugar de get(0).